fixed arrow positioning on safari

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@ html, body{
 
 .inputWithEmoji{
     border-radius: 4px;
+    position: absolute;
+    bottom: 100px;
     outline-color: #BBBBBB;
     min-width: 261px;
     height: 18px;
@@ -21,7 +23,8 @@ html, body{
     resize: none;
     text-align: left;
     line-height: 18px;
-    margin-right: -30px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 
@@ -44,8 +47,9 @@ html, body{
 }
 
 .emojiBtn{
+    position: absolute;
     cursor: pointer;
-    margin-right: -290px;
-    margin-top: -29px;
     z-index: 3;
+    bottom: 109px;
+    margin-left: 8.3rem;
 }
